k8s/apps/longhorn/tailscale.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: argocd
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "longhorn"
