k8s/apps/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.fomiller.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
